unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/SDO_Community_Ideas_Projects__c.object-meta.xml
<CustomObject>
    <description>What: Projects are used to track ideas generated by the community, through to fruition. 

Each project is assigned a project team and this app is used to define the project, track it&#39;s stage, open issues, and estimated completion date.</description>
    <label>Idea in Action</label>
    <nameField>
        <label>Idea in Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ideas in Action</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>