unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/A_Note_from_the_Project_Team__c.field-meta.xml
<CustomField>
    <fullName>A_Note_from_the_Project_Team__c</fullName>
    <inlineHelpText>Update from the project team on the status of the project.</inlineHelpText>
    <label>Ideas in Action Update</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>