unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Business_Justification__c.field-meta.xml
<CustomField>
    <fullName>Business_Justification__c</fullName>
    <inlineHelpText>Why do this project? 
What happens if we don’t do it? 
Why do it now? 
How critical will the impact of the project be?</inlineHelpText>
    <label>Business Justification</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>