unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/checkbox1__c.field-meta.xml
<CustomField>
    <fullName>checkbox1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>All the fields in the project object have been filled out and the project is ready to be presented.</inlineHelpText>
    <label>Initial Plan</label>
    <type>Checkbox</type>
</CustomField>