unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/checkbox2__c.field-meta.xml
<CustomField>
    <fullName>checkbox2__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The project has been presented and resources have been approved.</inlineHelpText>
    <label>Resourced</label>
    <type>Checkbox</type>
</CustomField>