unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/checkbox3__c.field-meta.xml
<CustomField>
    <fullName>checkbox3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A detailed project plan has been written and everything is ready to begin work.</inlineHelpText>
    <label>Plan Defined</label>
    <type>Checkbox</type>
</CustomField>