unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Communication_Plan__c.field-meta.xml
<CustomField>
    <fullName>Communication_Plan__c</fullName>
    <inlineHelpText>How do you plan on communicating the status of this project to the community?</inlineHelpText>
    <label>Communication Plan</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>