unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <inlineHelpText>Note that changes to the estimated completion date are are tracked in the field history tracking down below, along with the project status, owner, and estimated completion date.</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>