unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <inlineHelpText>What group is most directly responsible for this project?</inlineHelpText>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Sales</fullName>
            </value>
            <value>
                <fullName>Enterprise Sales</fullName>
            </value>
            <value>
                <fullName>Recruiting</fullName>
            </value>
            <value>
                <fullName>Employee Services</fullName>
            </value>
            <value>
                <fullName>Apps</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Interactive</fullName>
            </value>
            <value>
                <fullName>Demand Generation</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Applications</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>San Francisco</fullName>
            </value>
            <value>
                <fullName>Toronto</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Tokyo</fullName>
            </value>
            <value>
                <fullName>Sydney</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Premiere Support</fullName>
            </value>
            <value>
                <fullName>Implementation Services</fullName>
            </value>
            <value>
                <fullName>Standard Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>