unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Idea__c.field-meta.xml
<CustomField>
    <fullName>Idea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Idea</label>
    <referenceTo>Idea</referenceTo>
    <relationshipName>R00N8a00000BTyMnEAL</relationshipName>
    <type>Lookup</type>
</CustomField>