unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Level_of_Effort__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Effort__c</fullName>
    <inlineHelpText>What is the level of effort to complete this project? Is it a quick win or a resource intensive project?</inlineHelpText>
    <label>Level of Effort</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>