unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Note_5__c.field-meta.xml
<CustomField>
    <fullName>Note_5__c</fullName>
    <label>Note 5</label>
    <length>60</length>
    <type>Text</type>
</CustomField>