unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Notes_2__c</fullName>
    <label>Note 2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>