unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Priority_Flag__c.field-meta.xml
<CustomField>
    <fullName>Priority_Flag__c</fullName>
    <formula>IMAGE( CASE( Priority__c,  &quot;Low&quot;, &quot;/img/samples/flag_red.gif&quot;, &quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;, &quot;High&quot;, &quot;/img/samples/flag_green.gif&quot;, &quot;/s.gif&quot;), &quot;priority flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Priority ~</label>
    <type>Text</type>
</CustomField>