unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <inlineHelpText>Provide a short description of the project to define the goals, what is in scope, and what is out of scope.</inlineHelpText>
    <label>Project Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>