unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Project_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Project_Milestones__c</fullName>
    <inlineHelpText>What are some of the key milestones for this project? 

Milestones can also be cataloged and tracked in the related list below.</inlineHelpText>
    <label>Milestones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>