unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Project_Stage__c.field-meta.xml
<CustomField>
    <fullName>Project_Stage__c</fullName>
    <label>Project Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Evaluating</fullName>
                <default>true</default>
                <label>Evaluating</label>
            </value>
            <value>
                <fullName>Ready to Present Initial Plan for Approval</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On-Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Tabeled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>