unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Project_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Project_Status_Indicator__c</fullName>
    <formula>IMAGE( CASE(  Project_Status__c , &quot;Green&quot;, &quot;/img/samples/light_green.gif&quot;, &quot;Yellow&quot;, &quot;/img/samples/light_yellow.gif&quot;, &quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, &quot;/s.gif&quot;), &quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Status ~</label>
    <type>Text</type>
</CustomField>