unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Success_Factors__c.field-meta.xml
<CustomField>
    <fullName>Success_Factors__c</fullName>
    <inlineHelpText>Briefly describe any issues that will need to be addressed prior to or during the project. Are there any risks, dependencies, or constraints to be aware of? 

Project Issues can also be cataloged and  tracked in the related list below.</inlineHelpText>
    <label>Success Factors</label>
    <type>TextArea</type>
</CustomField>