unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/fields/Type_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Project__c</fullName>
    <label>Type of Project</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Customer Facing</fullName>
            </value>
            <value>
                <fullName>Partner Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>