unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/listViews/ActiveProjectsSuggestedbyCustomers.listView-meta.xml
<ListView>
    <fullName>ActiveProjectsSuggestedbyCustomers</fullName>
    <columns>NAME</columns>
    <columns>Project_Description__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Stage__c</field>
        <operation>equals</operation>
        <value>Evaluating,Ready to Present Initial Plan for Approval,Scheduled,In Progress</value>
    </filters>
    <filters>
        <field>Type_of_Project__c</field>
        <operation>equals</operation>
        <value>Customer Facing</value>
    </filters>
    <label>Active Projects Suggested by Customers</label>
    <language>en_US</language>
</ListView>