unpackaged/main/default/objects/SDO_Community_Ideas_Projects__c/listViews/AllProjects.listView-meta.xml
<ListView>
    <fullName>AllProjects</fullName>
    <columns>NAME</columns>
    <columns>Project_Stage__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Projects</label>
    <language>en_US</language>
</ListView>